<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LoginContentFrame"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/black" >

    <TextView
        android:id="@+id/LoginTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:text="@string/loginTitle"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/gray"
        android:textSize="@dimen/title_text_size" />

    <TableLayout
        android:id="@+id/LoginTableLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center" >

        <TableRow
            android:id="@+id/loginEmailRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal" >

            <EditText
                android:id="@+id/Login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="center_horizontal"
                android:hint="@string/loginHint"
                android:inputType="textEmailAddress"
                android:textColor="@color/gray" >
            </EditText>
        </TableRow>
        <TableRow 
             android:id="@+id/loginButtonRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

            <Button
                android:id="@+id/loginButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/loginButton"
                android:textColor="@color/gray" />
            
        </TableRow>
    </TableLayout>

</FrameLayout>